--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TicTacToe</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <script src="app.js"></script>
 </head>
 <body>
