Some tweaks and a new day

--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="main">
         <h1>Tic Tac Toe</h1>
+
+        <div class="scoreboard">
+            <div>Player X</div>
+            <div class="scorecount">0 : 0</div>
+            <div>Player O</div>
+        </div>
+
         <h3>Your turn:</h3>
         <h3 id="player">Player X</h3>
 
