--- a/Day14-todo/index.html
+++ b/Day14-todo/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>todo List</title>
     </head>
     <body>
