--- a/LastMessage/index.html
+++ b/LastMessage/index.html
@@ -7,14 +7,15 @@
 <body>
     <div class="main">
         <h4>A Message You would like to pass</h4>
-        
+
 
         <form class="message-form">
             <input type="text" class="typedMessage" placeholder="Type Your message" autofocus>
+            <button class="submit">Send</button>
         </form>
 
-        <h4>Last Message Delivered</h4>
-        <ul class="messages"></ul>
+        <h5>Last Message Delivered</h5>
+        <div class="messages"></div>
 
 
     </div>
