added dropshadow, looks more minimalist

--- a/LastMessage/index.html
+++ b/LastMessage/index.html
@@ -10,7 +10,7 @@
 
 
         <form class="message-form">
-            <input type="text" class="typedMessage" placeholder="Type Your message" autofocus>
+            <input type="text" class="typedMessage" placeholder="Type Your Message..." autofocus>
             <button class="submit">Send</button>
         </form>
 
