--- a/LastMessage/index.html
+++ b/LastMessage/index.html
@@ -8,15 +8,15 @@
     <div class="main">
         <h4>A Message You would like to pass</h4>
 
-
+        <!-- Where we will wite the message and submit it -->
         <form class="message-form">
             <input type="text" class="typedMessage" placeholder="Type Your Message..." autofocus>
             <button class="submit">Send</button>
         </form>
 
+        <!-- Where message will be output for two seconds -->
         <h5>Last Message Delivered</h5>
         <div class="messages"></div>
-
 
     </div>
     
