The program can now generate complementary colors

--- a/RandomColor/index.html
+++ b/RandomColor/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>Get a random color</h1>
     <button class="submit">Generate</button>
-    <p class="final"></p>
-    <div class="colour"></div>
+    <div class="container"> 
+        <div class="colour"></div>
+        <div class="complement"></div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
