--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <title>TicTacToe</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet"> -->
     <script src="app.js"></script>
 </head>
 <body>
     <div class="main">
-        <h1>Tic Tac Toe</h1>
+        <span class="title">TIC TAC TOE</span>
 
         <div class="scoreboard">
-            <div>Player X</div>
+            <div class="score-badge playerx">Player X</div>
             <div class="scorecount">0 : 0</div>
-            <div>Player O</div>
+            <div class="score-badge playero">Player O</div>
         </div>
 
-        <h3>Your turn:</h3>
         <h3 id="player">Player X</h3>
 
         <div class="grid">
